# Plot-It

./: .flake8  README.md  catalog-info.yaml  pyproject.toml  requirements.txt
docs/: Development.md
examples/weather/: plot.yaml  weather_data.csv
plot_it/cli/: __init__.py  plot_command.py
plot_it/core/data_loader/: __init__.py
plot_it/core/plot/: __init__.py  plotter.py
plot_it/core/plot/engine/: __init__.py  base_engine.py  matplotlib_engine.py
plot_it/core/plot/formatter/: __init__.py  default_formatters.py  format_store.py
plot_it/models/: __init__.py  axis.py  chart.py  plot.py  result.py
plot_it/utils/: date_utils.py  logger_config.py
